--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.22.0",
     "v-calendar": "^0.9.4",
     "vue": "^2.5.2",
+    "vue-multiselect": "^2.1.0",
     "vue-resource": "^1.5.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
