--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "concurrently": "^3.5.1",
+    "json-server": "^0.12.1",
     "moment": "^2.22.0",
+    "node-pre-gyp": "^0.9.1",
+    "save": "^2.3.2",
     "v-calendar": "^0.9.4",
     "vue": "^2.5.2",
     "vue-multiselect": "^2.1.0",
