--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.9",
     "concurrently": "^3.5.1",
@@ -27,6 +28,7 @@
     "vue-multiselect": "^2.1.0",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vue-touch": "^2.0.0-beta.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
