--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "save": "^2.3.2",
     "v-calendar": "^0.9.4",
     "vue": "^2.5.2",
+    "vue-i18n": "^7.6.0",
     "vue-multiselect": "^2.1.0",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
