--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^3.5.1",
     "json-server": "^0.12.1",
     "moment": "^2.22.0",
+    "moment-timezone": "^0.5.17",
     "node-pre-gyp": "^0.9.1",
     "save": "^2.3.2",
     "v-calendar": "^0.9.4",
