--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tweenjs/tween.js": "^17.2.0",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.9",
+    "chart.js": "^2.7.2",
     "concurrently": "^3.5.1",
     "json-server": "^0.12.1",
     "moment": "^2.22.0",
@@ -26,6 +27,7 @@
     "save": "^2.3.2",
     "v-calendar": "^0.9.4",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-i18n": "^7.6.0",
     "vue-multiselect": "^2.1.0",
     "vue-resource": "^1.5.0",
