--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bootstrap-vue": "^2.0.0-rc.9",
     "chart.js": "^2.7.2",
     "concurrently": "^3.5.1",
-    "json-server": "^0.12.1",
+    "json-server": "^0.14.0",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.17",
     "node-pre-gyp": "^0.9.1",
@@ -33,6 +33,7 @@
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vue-touch": "^2.0.0-beta.4",
+    "vuewheel": "^2.1.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -68,7 +69,7 @@
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -76,7 +77,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "less": "^3.0.1",
+    "less": "^3.7.1",
     "less-loader": "^4.1.0",
     "mocha": "^3.2.0",
     "node-notifier": "^5.1.2",
